Aded auto publish vendor

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
             "email": "billibons777@gmail.com"
         }
     ],
+    "scripts": {
+        "post-install-cmd": "php artisan vendor:publish --provider 'Vilija19\\Modelshistory\\ModelsHistoryServiceProvider'"
+    },
     "extra": {
         "laravel": {
             "providers": [
